# ModuleConfigurator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  generate.py  generate_project.py
app/: CMakeLists.txt  main_app.cpp
app/templates/: main_app.cpp.j2
include/: debug_log.hpp
include/custom_board/: driver_ids.hpp
instances/stm32/: CMakeLists.txt  toolchain.cmake
instances/stm32/stm32h5xx/: CMakeLists.txt
instances/stm32/stm32h5xx/Inc/: stm32h5xx_hal_conf.h
instances/stm32/stm32h5xx/Src/: freertos_impl.c  main.cpp  stm32h5xx_hal_msp.c  stm32h5xx_it.c
lib/drivers/: CMakeLists.txt
lib/drivers/include/: .template  adc.hpp  can.hpp  ethernet.hpp  pwm.hpp  raceup_fdcan.h  raceup_setup.h  serial.hpp  spi.hpp  timer.hpp
lib/drivers/include/common/: common.hpp
lib/drivers/include/common/forward_decl/: .template  adc.hpp  common.hpp  gpio.hpp  i2c.hpp  serial.hpp  timer.hpp
lib/drivers/include/templates/: raceup_setup.h.j2
lib/drivers/instances/stm32h5xx/: flash_memory.cpp  i2c.cpp  raceup_setup.c  serial.cpp  spi.cpp
lib/drivers/instances/stm32h5xx/templates/: raceup_setup.c.j2
resources/baremetal_drivers/FDCANDriver/: .gitignore  AUTHORS
resources/baremetal_drivers/FDCANDriver/Inc/: raceup_fdcan.dox
resources/baremetal_drivers/FDCANDriver/Src/: raceup_fdcan.c
resources/baremetal_drivers/USARTDriver/: AUTHORS  LICENSE
resources/baremetal_drivers/USARTDriver/Inc/: raceup_usart.dox  raceup_usart.h
resources/baremetal_drivers/USARTDriver/Src/: raceup_usart.c
resources/freertos_base/: CMakePresets.json
resources/freertos_base/app/: main_app.cpp
resources/freertos_base/instances/stm32/: syscalls.cpp
resources/freertos_base/instances/stm32/stm32h5xx/Inc/: stm32h5xx_hal_conf.h  stm32h5xx_it.h
resources/freertos_base/instances/stm32/stm32h5xx/Src/: main.cpp
resources/freertos_base/instances/stm32/stm32h5xx/stm32h562rgt6/: CMakeLists.txt
resources/freertos_base/instances/stm32/stm32h5xx/stm32h563vit6x/: CMakeLists.txt
resources/freertos_base/lib/drivers/include/: flash_memory.hpp  gpio.hpp  i2c.hpp
resources/freertos_base/lib/drivers/include/common/: capability.hpp  driver_id_macros.hpp  instance_ids.hpp
resources/freertos_base/lib/drivers/include/common/forward_decl/: can.hpp  ethernet.hpp  flash_memory.hpp  pwm.hpp  spi.hpp
resources/freertos_base/lib/drivers/instances/debug/: adc.cpp  common.cpp  flash_memory.cpp  gpio.cpp  serial.cpp  spi.cpp
resources/freertos_base/lib/drivers/instances/rp2350/: can.cpp  gpio.cpp  i2c.cpp  pwm.cpp  serial.cpp  timer.cpp
resources/freertos_base/lib/drivers/instances/stm32h5xx/: adc.cpp  can.cpp  common.cpp  gpio.cpp  pwm.cpp  timer.cpp
scripts/: cmake-clean-all.sh  set-clangd-target.sh
templates/baremetal/: Makefile.jinja
templates/baremetal/Inc/: main.h.jinja
templates/baremetal/Src/: main.c.jinja  raceup_setup.c.jinja  stm32h5xx_it.c.jinja
templates/freertos/: CMakeLists.txt.jinja
templates/freertos/include/: FreeRTOSConfig.h.jinja
templates/freertos/instances/stm32/stm32h5xx/: CMakeLists.txt.jinja
templates/freertos/instances/stm32/stm32h5xx/Inc/: main.h.jinja
tools/: clock_prescaler.py  config.yaml  copy_files.py  gen_config.py  generate_templates.py  sample.py
tools/templates/: Makefile.jinja
tools/templates/Inc/: main.h.jinja  raceup_setup.h.jinja  stm32h5xx_hal_conf.h.jinja  stm32h5xx_it.h
tools/templates/Src/: main.c.jinja  raceup_msp.c.jinja  stm32h5xx_it.c.jinja
